Fix java 17 migration issues